added javascript library needed for Google signin button

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -9,7 +9,7 @@
     </noscript>
 
     <div id="app"></div>
-
+    <script src="https://apis.google.com/js/api:client.js"></script>
   <!--   <a href="{% provider_login_url 'google' %}">Login with Google</a> -->
 
 {% endblock %}
