added link to Material Design stylesheet, changed page title

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -7,8 +7,10 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">	    <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="viewport" content="width=device-width, initial-scale=1">	    <meta name="description" content="Django-rest-auth demo">
         <!-- <link rel="icon" href="favicon.ico"> -->	    <meta name="author" content="Tivix, Inc.">
-        <title>Django + Vue CLI + Webpack demo</title>	
-        {% endblock %}	    <title>django-rest-auth demo</title>
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+
+        <title>Open DP App</title>
+        {% endblock %}	    <title>Open DP App</title>
     </head>	
     <body {% block body_tag_attributes %}{% endblock %}>	    <!-- Latest compiled and minified CSS -->
         {% block body %}	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
