--- a/server/templates/dataverses/test_base.html
+++ b/server/templates/dataverses/test_base.html
@@ -36,6 +36,9 @@
       }
     </style>
     <!-- Custom styles for this template -->
+    {% block additional_head_content %}
+       <!--  (additional_head_content block) -->
+    {% endblock %}
   </head>
   <body>
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
