proof of concept #118

--- a/server/opendp_apps/async_messages/templates/async_messages/room.html
+++ b/server/opendp_apps/async_messages/templates/async_messages/room.html
@@ -30,7 +30,9 @@
             console.log('--------------------');
              */
             document.querySelector('#chat-log').value += (data.message.user_message + '\n');
-            // document.querySelector('#chat-log').value += (JSON.stringify(data.message.data) + '\n');
+            //if (data.message.data) {
+            //    document.querySelector('#chat-log').value += (JSON.stringify(data.message.data) + '\n');
+            //}
         };
 
         chatSocket.onclose = function(e) {
