modify files to work with new components

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -2,14 +2,18 @@
 <!doctype html>	
 <html {% block html_tag_attributes %}{% endblock %}>	<html lang="en">
     <head>	  <head>
-        {% block head %}	    <meta charset="utf-8">
-        <meta charset="utf-8">	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">	    <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1">	    <meta name="description" content="Django-rest-auth demo">
-        <!-- <link rel="icon" href="favicon.ico"> -->	    <meta name="author" content="Tivix, Inc.">
+        {% block head %}
+            <meta charset="utf-8">
+            <meta charset="utf-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta http-equiv="x-ua-compatible" content="ie=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <meta name="description" content="Django-rest-auth demo">
+            <meta name="author" content="Tivix, Inc.">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 
-        <title>Open DP App</title>
+            <title>Open DP App</title>
         {% endblock %}	    <title>Open DP App</title>
     </head>	
     <body {% block body_tag_attributes %}{% endblock %}>	    <!-- Latest compiled and minified CSS -->
