include "profile_variables" in datasetInfo. part of #243

--- a/server/opendp_apps/async_messages/templates/async_messages/view_profile_test.html
+++ b/server/opendp_apps/async_messages/templates/async_messages/view_profile_test.html
@@ -50,7 +50,7 @@ Example of using async/websockets.
                     <!-- file exists -->
                     <i class="bi table"></i>
                     (source file exists)
-                    <a href="#" id="{{ ds.object_id}}" class="profile-btn btn btn-sm btn-primary">Download + Profile!</a>
+                    <a href="#" id="{{ ds.object_id}}" class="profile-btn btn btn-sm btn-primary">Profile!</a>
                 {% elif ds.data_profile %}
                     Hmm, data_profile but not source...
                 {% else %}
