--- a/server/opendp_apps/async_messages/templates/async_messages/view_profile_test.html
+++ b/server/opendp_apps/async_messages/templates/async_messages/view_profile_test.html
@@ -50,7 +50,7 @@ Example of using async/websockets.
                     <!-- file exists -->
                     <i class="bi table"></i>
                     (source file exists)
-                    <a href="#" id="{{ ds.object_id}}" class="profile-btn btn btn-sm btn-primary">Download + Profile!</a>
+                    <a href="#" id="{{ ds.object_id}}" class="profile-btn btn btn-sm btn-primary">Profile!</a>
                 {% elif ds.data_profile %}
                     Hmm, data_profile but not source...
                 {% else %}
@@ -89,14 +89,15 @@ Example of using async/websockets.
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <!-- END: jQuery, Popper.js, Bootstrap JS -->
 
-    {#% csrf_token %#}
+<!-- Start: Hidden HTML input element for the Django CSRF token -->
+{% csrf_token %}
+<!-- End: Hidden HTML input lement for the Django CSRF token -->
 
 <script>
     /* ---------------------------------------------- */
     /* Start a new websocket upon page load           */
     /* ---------------------------------------------- */
     const chatSocket = new WebSocket(
-
         '{{ WEBSOCKET_PREFIX }}' + window.location.host + '/async_messages/ws/profile/{{ websocket_id }}' + '/'
     );
 
@@ -106,19 +107,19 @@ Example of using async/websockets.
     chatSocket.onmessage = function(e) {
 
         // parse the incoming JSON to a .js object
-        const ws_data = JSON.parse(e.data);
+        const ws_data = JSON.parse(e.data);  // JSON -> javascript object
+        const ws_msg = ws_data.message;      // "message" object sent from the backend
 
         /* "ws_msg" attributes are the defined in the Python WebsocketMessage object
-             msg_type (str): expected "PROFILER_MESSAGE"
-             success (boolean):  error detected?
-             user_message (str): description of what happened
-             msg_cnt (int): Not used for the profiler
-             data: Profile data, if it exists, JSON
-             timestamp: timestamp
+             - msg_type (str): expected "PROFILER_MESSAGE"
+             - success (boolean):  error detected?
+             - user_message (str): description of what happened
+             - data: Profile data, if it exists, JSON
+             - timestamp: timestamp
+            - msg_cnt (int): Not used for the profiler
 
             - reference: opendp_apps/async_messages/websocket_message.py
         */
-        const ws_msg = ws_data.message
 
         // "ws_msg.msg_type": should be 'PROFILER_MESSAGE'
         if (ws_msg.msg_type !== 'PROFILER_MESSAGE') {
@@ -168,21 +169,48 @@ Example of using async/websockets.
         };
     };
 
-
+    // ------------------------------------------------
+    //  Button handlers and AJAX call to kickoff the
+    //   profiling process
+    // ------------------------------------------------
     $(document).ready(function() {
+
+        // Retrieve the csrfmiddlewaretoken in the hidden HTML form field
+        //
+        const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
+
+        // The Profile button has been clicked....
+        //
         $("a.profile-btn").click(function() {
+
+            // Get the dataset object_id
             let dataset_id = this.id
             console.log('profile! ' + dataset_id);//Do stuff when clicked
-            params = {'dataset_object_id': dataset_id};
 
-            const request = new Request(
-                "{% url 'ajax_profile_by_dataset_object_id' %}",
-                // {headers: {'X-CSRFToken': csrftoken}}
-            );
+            // Set the POST params
+            //
+            params = {'object_id': dataset_id};
 
+            // API endpoint defined in the DRF router. See the project's urls.py
+            //
+            ajax_url = '/api/profile/run-async-profile/'
+
+            console.log('ajax_url', ajax_url)
+
+            // Create a new Request object
+            //
+            const request = new Request(ajax_url);
+
+            // Send in a POST request with JSON params and the CSRF token for auth
+            //
             fetch(request, {
+              //credentials: 'include',
               method: "POST",
               mode: 'same-origin',  // Do not send CSRF token to another domain.
+              headers: {
+                  'Content-Type': 'application/json',
+                  'X-CSRFToken': csrftoken
+              },
               body: JSON.stringify(params)
             })
             .then(response => response.json())
@@ -195,8 +223,6 @@ Example of using async/websockets.
               document.querySelector('#postResult').innerHTML = error;
 
             });
-
-              //$( "#postResult" ).html( data );
         });
     });
 
