--- a/server/templates/dataverses/test_base.html
+++ b/server/templates/dataverses/test_base.html
@@ -39,7 +39,7 @@
   </head>
   <body>
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-  <h5 class="my-0 mr-md-auto font-weight-normal">OpenDP App - Mock Params</h5>
+  <h5 class="my-0 mr-md-auto font-weight-normal">DP Creator - Mock Params</h5>
   <nav class="my-2 my-md-0 mr-md-3">
   {% comment %}
     <a class="p-2 text-dark" href="#">Features</a>
