--- a/server/opendp_apps/analysis/templates/analysis/dp_stat_general_description.html
+++ b/server/opendp_apps/analysis/templates/analysis/dp_stat_general_description.html
@@ -1,29 +1,1 @@
-
-<ul>
-    <li><b>Statistic:</b> Differentially private "{{ stat.statistic|title }}" for variable "{{ stat.variable}}"</li>
-    <li><b>Result:</b> {{ stat.value}}</li>
-    {% if stat.accuracy_val %}
-    <li><b>Accuracy:</b> {{ stat.accuracy_val}}
-        <p>There is a probability of {{ stat.get_ci_text }} that the output count will differ from the true count by at most {{ stat.accuracy_val}} units. Here the units are the same units the variable has in the dataset.</p>
-    </li>
-    {% endif %}
-    <li><b>Parameters:</b>
-        <ul>
-            <li><b>Epsilon:</b> {{ stat.epsilon }}</li>
-            {% if stat.use_min_max and stat.min and stat.max %}
-            <li><b>Bounding min / max:</b> {{ stat.min }} / {{ stat.max }}</li>
-            {% endif %}
-            <li><b>Missing value handling:</b>
-                {% if stat.missing_values_handling == MISSING_VAL_INSERT_FIXED %}
-                    Insert fixed value using "{{ stat.fixed_value }}".
-                {% elif stat.missing_values_handling == MISSING_VAL_INSERT_RANDOM %}
-                    Insert random values.
-                {% else %}
-                    {{ stat.missing_values_handling }}
-                {% endif %}
-            </li>
-        </ul>
-    </li>
-
-</ul>
-{% spaceless %}{% endspaceless %}
+A differentially private <b>{{ stat.statistic|title }}</b> for variable <b>{{ stat.variable}}</b> was calculated with the result <b>{{ stat.value}}</b>. {% if stat.accuracy_val %}There is a probability of <b>{{ stat.get_ci_text }}</b> that the output count will differ from the true count by at most <b>{{ stat.accuracy_val}}</b> units. Here the units are the same units the variable has in the dataset.{% endif %}
