clean up for #359 (server tests passing, not integration tests)

--- a/server/opendp_apps/analysis/templates/analysis/dp_stat_general_description_tbl.html
+++ b/server/opendp_apps/analysis/templates/analysis/dp_stat_general_description_tbl.html
@@ -15,7 +15,7 @@
     </tr>
     <tr>
         <th>Accuracy Message</th>
-        <td>There is a probability of {{ stat.get_ci_text }} that the output count will differ from the true count by at most {{ stat.accuracy_val}} units. Here the units are the same units the variable has in the dataset.</td>
+        <td>There is a probability of {{ stat.get_cl_text }} that the output count will differ from the true count by at most {{ stat.accuracy_val}} units. Here the units are the same units the variable has in the dataset.</td>
     </tr>
     {% endif %}
     <tr>
