--- a/server/opendp_apps/terms_of_access/templates/1.0.html
+++ b/server/opendp_apps/terms_of_access/templates/1.0.html
@@ -766,7 +766,7 @@
     <li class="c4 c11 li-bullet-0"><h1 style="display:inline"><span class="c3 c0">INTELLECTUAL PROPERTY RIGHTS AND POLICIES</span>
     </h1></li>
 </ol>
-<p class="c4"><span class="c0">Ownership.</span><span>&nbsp;</span><span class="c1">The Application and Application content are subject to _______ Open Source License.</span>
+<p class="c4"><span class="c0">Ownership.</span> <span>The Application and Application content are subject to the open source MIT License.</span>
 </p>
 <p class="c4"><span class="c0">Use License.</span><span class="c2">&nbsp;Subject to the Terms of this agreement, we grant you a limited, revocable, and non-exclusive right to access the Application and its content, for the limited and sole purpose of facilitating your use of the Application. </span>
 </p>
@@ -780,10 +780,8 @@
 </ul>
 <p class="c4"><span class="c2">Content posted and subsequently removed by you may still be available to OpenDP and your removal of such content does not terminate this license. </span>
 </p>
-<p class="c4"><span class="c0">User Dataset. </span><span>OpenDP claims neither rights nor ownership of the User Dataset. OpenDP will use User Datasets to generate a DP Release. After which, OpenDP will </span><span
-        class="c1">purge the relevant User Dataset from the Application.</span></p>
-<p class="c4"><span class="c0">Copyright Policy.</span><span>&nbsp;If you own a copyright and believe that content on the Application infringes upon that copyright, please submit to our designated agent a notification per the Digital Millennium Copyright Act, providing us with notice of claim of copyright infringement in writing to&nbsp;[</span><span
-        class="c1">insert email</span><span class="c2">] &nbsp;per 17 U.S.C. 512(c)(3), including: the physical or electronic signature of the person authorized to act on behalf of the copyright owner; identification of the copyrighted work or works allegedly infringed; contact information sufficient to allow us to contact you (e.g. mailing address, email address, and telephone number); a statement of your good faith belief that the use of the content in question was done without the authorization of the copyright owner, their agent, or the law; and a statement that all information contained in your notice is accurate under penalty of perjury, and that you are authorized to act on behalf of the owner of the exclusive right allegedly infringed.</span><a
+<p class="c4"><span class="c0">User Dataset. </span><span>OpenDP claims neither rights nor ownership of the User Dataset. OpenDP will use User Datasets to generate a DP Release. After which, OpenDP will </span>purge the relevant User Dataset from the Application.</p>
+<p class="c4"><span class="c0">Copyright Policy.</span><span>&nbsp;If you own a copyright and believe that content on the Application infringes upon that copyright, please submit to our designated agent a notification per the Digital Millennium Copyright Act, providing us with notice of claim of copyright infringement in writing to</span> <span class="c0">info@opendp.org</span><span class="c2">&nbsp;per 17 U.S.C. 512(c)(3), including: the physical or electronic signature of the person authorized to act on behalf of the copyright owner; identification of the copyrighted work or works allegedly infringed; contact information sufficient to allow us to contact you (e.g. mailing address, email address, and telephone number); a statement of your good faith belief that the use of the content in question was done without the authorization of the copyright owner, their agent, or the law; and a statement that all information contained in your notice is accurate under penalty of perjury, and that you are authorized to act on behalf of the owner of the exclusive right allegedly infringed.</span><a
         id="id.3dy6vkm"></a></p>
 <ol class="c7 lst-kix_list_1-0" start="7">
     <li class="c4 c11 li-bullet-0"><h1 style="display:inline"><span class="c3 c0">DISCLAIMERS AND LIMITATIONS</span>
@@ -828,8 +826,7 @@
 </p>
 <p class="c4"><span class="c0">Relationship of the Parties</span><span class="c2">. No agency, partnership, joint venture, employee-employer or franchisor-franchisee relationship is intended or created by these Terms between you and OpenDP.</span>
 </p>
-<p class="c4"><span>Please contact us at</span><span class="c1">&nbsp;[insert</span><span
-        class="c1 c12">&nbsp;email]</span><span class="c1">&nbsp;</span><span class="c2">with any questions regarding these Terms.</span>
+<p class="c4"><span>Please contact us at </span><span class="c0">info@opendp.org</span> <span class="c2">with any questions regarding these Terms.</span>
 </p>
 </body>
 </html>
