--- a/server/templates/registration/password_reset_email.html
+++ b/server/templates/registration/password_reset_email.html
@@ -2,7 +2,7 @@ Hello,
 
 To reset the password for your {{ domain }} account, use this link:
 
-{{ protocol }}://{{ domain }}/password_reset/{{ uid }}/{{ token }}
+{{ protocol }}://{{ domain }}/password-reset-confirm/{{ uid }}/{{ token }}
 
 If you didn't request a password reset, ignore this email.
 
