--- a/server/templates/base-vue.html
+++ b/server/templates/base-vue.html
@@ -9,33 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <script src="https://apis.google.com/js/api:client.js"></script>
-    <link href="http://127.0.0.1:8080/12.1b1885d2d90392437adf.hot-update.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/0.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/1.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/10.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/11.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/12.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/13.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/14.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/15.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/16.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/17.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/18.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/19.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/2.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/20.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/21.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/22.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/3.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/4.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/5.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/6.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/7.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/8.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/9.js" rel="prefetch">
-    <link href="http://127.0.0.1:8080/js/app.js" rel="preload" as="script">
-    <link href="http://127.0.0.1:8080/js/chunk-vendors.js" rel="preload" as="script">
-</head>
+<link href="http://127.0.0.1:8080/13.b80567bb5d2eecda8ea0.hot-update.js" rel="prefetch"><link href="http://127.0.0.1:8080/22.b80567bb5d2eecda8ea0.hot-update.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/0.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/1.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/10.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/11.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/12.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/13.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/14.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/15.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/16.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/17.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/18.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/19.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/2.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/20.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/21.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/22.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/23.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/24.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/25.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/3.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/4.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/5.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/6.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/7.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/8.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/9.js" rel="prefetch"><link href="http://127.0.0.1:8080/js/app.js" rel="preload" as="script"><link href="http://127.0.0.1:8080/js/chunk-vendors.js" rel="preload" as="script"></head>
 <body>
 <noscript>
     <strong>We're sorry but client doesn't work properly without JavaScript enabled.
@@ -43,7 +17,5 @@
 </noscript>
 <div id="app"></div>
 <!-- built files will be auto injected -->
-<script type="text/javascript" src="http://127.0.0.1:8080/js/chunk-vendors.js"></script>
-<script type="text/javascript" src="http://127.0.0.1:8080/js/app.js"></script>
-</body>
+<script type="text/javascript" src="http://127.0.0.1:8080/js/chunk-vendors.js"></script><script type="text/javascript" src="http://127.0.0.1:8080/js/app.js"></script></body>
 </html>
