Removing floatformat (rounding) calls froms templates

--- a/server/opendp_apps/analysis/templates/analysis/dp_stat_accuracy_default.html
+++ b/server/opendp_apps/analysis/templates/analysis/dp_stat_accuracy_default.html
@@ -1,3 +1,3 @@
 There is a probability of <b>{{ stat.get_cl_text }}</b> that the <b>DP {{ stat.statistic|title }}</b> will differ from
-the true {{ stat.statistic|title }} by at most <b>{{ stat.accuracy_val|floatformat:2 }}</b> units. Here the units are the same units
+the true {{ stat.statistic|title }} by at most <b>{{ stat.accuracy_val }}</b> units. Here the units are the same units
 the variable <b>{{ stat.variable }}</b> has in the dataset.
