--- a/server/opendp_apps/analysis/templates/analysis/dp_stat_general_description.html
+++ b/server/opendp_apps/analysis/templates/analysis/dp_stat_general_description.html
@@ -1,3 +1,1 @@
-A differentially private <b>{{ stat.statistic|title }}</b> for variable <b>{{ stat.variable }}</b> was calculated with
-the result <b>{{ stat.value }}</b>.  {% if stat.accuracy_val %}{% include "analysis/dp_stat_accuracy_default.html" %}
-{% endif %}
+A differentially private <b>{{ stat.statistic|title }}</b> for variable <b>{{ stat.variable }}</b> was calculated with the result <b>{{ stat.value }}</b>.  {% if stat.accuracy_val %}{% include "analysis/dp_stat_accuracy_default.html" %}{% endif %}
