start of pdf updates #635

--- a/server/opendp_apps/dp_reports/templates/pdf_report/view_create_pdf_report.html
+++ b/server/opendp_apps/dp_reports/templates/pdf_report/view_create_pdf_report.html
@@ -8,7 +8,7 @@
     <table style="padding: 20px; border: 0;">
 {{ form.as_table }}
 </table>
-</p><br/> <button type="cancel">Cancel</button> &nbsp;&nbsp;
+</p><br/> <button type="reset">Reset</button> &nbsp;&nbsp;
     <button type="submit">Make PDF</button></p>
 </form>
 
