Hiding buttons if ALLOW_DEMO_LOADING is false, using decorator to check commands, and improving spacing

--- a/server/opendp_apps/dataset/templates/admin/dataset/datasetinfo_change_list.html
+++ b/server/opendp_apps/dataset/templates/admin/dataset/datasetinfo_change_list.html
@@ -2,18 +2,20 @@
 
 {% block object-tools %}
     {% if request.user.is_superuser %}
-    <div>
-        <p>Warning!! Both buttons delete all other test data!</p>
-        <form action="setup-demo/" method="POST" style="display: inline-block;">
-            {% csrf_token %}
-            <button type="submit" style="border-radius: 5px; background-color: #ed2b37; border:0; color: #ffffff; line-height: 150%;">Setup Demo</button>
-        </form>
-        <form action="clear-test-data/" method="POST" style="display: inline-block;">
-            {% csrf_token %}
-            <button type="submit" style="border-radius: 5px; background-color: #ed2b37; border:0; color: #ffffff; line-height: 150%;">Clear Test Data</button>
-        </form>
-        <br /><br />
-    </div>
+        {% if allow_demo_loading %}
+            <div>
+                <p>Warning!! Both buttons delete all other test data!</p>
+                <form action="setup-demo/" method="POST" style="display: inline-block;">
+                    {% csrf_token %}
+                    <button type="submit" style="border-radius: 5px; background-color: #ed2b37; border:0; color: #ffffff; line-height: 150%;">Setup Demo</button>
+                </form>
+                <form action="clear-test-data/" method="POST" style="display: inline-block;">
+                    {% csrf_token %}
+                    <button type="submit" style="border-radius: 5px; background-color: #ed2b37; border:0; color: #ffffff; line-height: 150%;">Clear Test Data</button>
+                </form>
+                <br /><br />
+            </div>
+        {% endif %}
     {% endif %}
     {{ block.super }}
 {% endblock %}
